add: twitter register

--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -13,6 +13,9 @@ $(
 
 {% block content %}
 
-It works!
+<a href="/register">
+<img src="static/images/sign-in-with-twitter-d.png">
+</a>
+
 
 {% endblock %}
